Fixing z-index of -hover on masonry cards

--- a/web/app/themes/ivoh/assets/styles/components/_cards.scss
+++ b/web/app/themes/ivoh/assets/styles/components/_cards.scss
@@ -155,6 +155,9 @@
     }
     .card {
       z-index: 1;
+      &.-hover {
+        z-index: 2;
+      }
     }
     &.sm-halves {
       @include media-sm {
